--- a/src/components/Сharts/charts.module.css
+++ b/src/components/Сharts/charts.module.css
@@ -6,6 +6,7 @@
 .chartsWrapper {
     display: flex;
     width: 65%;
+    flex-wrap: wrap;
 }
 
 .areaChart {
@@ -19,6 +20,10 @@
 .pieLabel {
     color: green;
     font-weight: 900;
+}
+
+.barChart {
+    margin-top: 50px;
 }
 
 
